Fix/monaco resizing (#82)
* Reworked the way that the editor and output are rendered when the browser window / panes are resized horizontally. Moved the ReflexContainer elements into the editors variable to get vertical resizing working. Also, removed the margin-bottom property from the .editor class in classic.css and set overflow to hidden in .react-monaco-editor-container. By doing this it prevents the browser scrollbars from appearing and removes the white space at the bottom of the editor / output panes when scrolling all the way down past the code.

--- a/packages/learn/src/templates/Challenges/classic/classic.css
+++ b/packages/learn/src/templates/Challenges/classic/classic.css
@@ -1,6 +1,5 @@
-.editor{
+.editor {
   height: 100%;
-  margin-bottom: 1.45rem;
 }
 
 .instructions-panel {
@@ -12,6 +11,7 @@
   height: 100%;
   display: flex;
   align-items: end;
+  overflow: hidden;
 }
 
 .monaco-menu .action-label { 
